// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wml parser should ignore whitespace outside tags 1`] = `
Array [
  Object {
    "contents": Array [],
    "endTagToken": 6,
    "key": "Test",
    "startTagToken": 1,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse a single tag 1`] = `
Array [
  Object {
    "contents": Array [],
    "endTagToken": 5,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse elements correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "endTagToken": 73,
        "key": "ABC",
        "startTagToken": 41,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
      Object {
        "contents": Array [
          Object {
            "endTagToken": 80,
            "startTagToken": 80,
            "tag": "Whitespace",
          },
          Object {
            "endTagToken": 86,
            "startTagToken": 81,
            "tag": "Comment",
          },
          Object {
            "endTagToken": 87,
            "startTagToken": 87,
            "tag": "Whitespace",
          },
          Object {
            "contents": Array [],
            "endTagToken": 102,
            "key": "ABC",
            "startTagToken": 88,
            "tag": "Room",
            "x": undefined,
            "y": undefined,
          },
          Object {
            "endTagToken": 103,
            "startTagToken": 103,
            "tag": "Whitespace",
          },
        ],
        "dependencies": Array [],
        "endTagToken": 104,
        "if": "open",
        "startTagToken": 75,
        "tag": "Condition",
      },
      Object {
        "contents": Array [],
        "endTagToken": 117,
        "key": "DEF",
        "startTagToken": 106,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
    ],
    "endTagToken": 157,
    "fileName": "test",
    "key": "Test",
    "startTagToken": 1,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse one level of nesting 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "endTagToken": 10,
        "key": "ABC",
        "startTagToken": 5,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
    ],
    "endTagToken": 11,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;
